--- a/cms/.eslintrc
+++ b/cms/.eslintrc
@@ -37,6 +37,7 @@
             }
         ],
         "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "import/prefer-default-export": "off",
         "no-unused-expressions": "off",
         "spaced-comment": ["warn", "always"],
         "no-unreachable": "warn",
